# 2022NASA

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 6feb4f2c5ba3_added_files_table.py
app/: config.py  main.py  models.py  schemas.py
app/nlp_model/: Preprocessing_eng_custom.py  Text_outline.py  hack_utils.py  insert_db.py  test.py
app/routers/: search.py  show_content.py  upload.py
