[tool.poetry]
name = "2022nasa"
version = "0.1.0"
description = ""
authors = ["Bonnie Cai <i34096022@gs.ncku.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
python-multipart = "^0.0.5"
transformers = "^4.22.2"
pandas = "^1.5.0"
sentencepiece = "^0.1.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
